# news_poc

./: README.md  pyproject.toml
app/: config.py  main.py
app/api/endpoints/: articles.py
app/core/: analyzer.py  generator.py  image_finder.py  rss_fetcher.py
app/models/: article.py
app/services/: openai_service.py
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-development-fallback/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @radix-ui.js  @swc.js  class-variance-authority.js  clsx.js  lucide-react.js  next.js  tailwind-merge.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.75fb910a43e30584.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/models/: article.py
frontend/app/settings/: page.tsx
frontend/components/: article-list.tsx  loading-spinner.tsx  news-generator-form.tsx  theme-provider.tsx
frontend/components/ui/: alert.tsx  use-toast.ts
frontend/context/: news-context.tsx
frontend/lib/: api-client.ts
frontend/services/: api.ts
frontend/types/: article.ts
(+4 files in other folders)
